package/main/default/objects/TriggerToggle__c/TriggerToggle__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Disable Apex triggers for the OneGraph GraphQL Subscriptions package</description>
    <label>Trigger Toggles</label>
</CustomObject>