package/main/default/objects/TriggerToggle__c/fields/Disable_Account_Delete_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_Account_Delete_Trigger__c</fullName>
    <defaultValue>true</defaultValue>
        <description>Disables the Apex trigger for Account deletes. If this is checked, then accountDeleted subscriptions will not be available.</description>
    <inlineHelpText>Disables the Apex trigger for Account deletes. If this is checked, then accountDeleted subscriptions will not be available.</inlineHelpText>
    <label>Disable Account Delete Trigger</label>
    <type>Checkbox</type>
</CustomField>