package/main/default/objects/TriggerToggle__c/fields/Disable_Account_Insert_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_Account_Insert_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
        <description>Disables the Apex trigger for Account inserts. If this is checked, then accountCreated subscriptions will not be available.</description>
    <inlineHelpText>Disables the Apex trigger for Account inserts. If this is checked, then accountCreated subscriptions will not be available.</inlineHelpText>
    <label>Disable Account Insert Trigger</label>
    <type>Checkbox</type>
</CustomField>