package/main/default/objects/TriggerToggle__c/fields/Disable_Account_Undelete_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_Account_Undelete_Trigger__c</fullName>
    <defaultValue>true</defaultValue>
        <description>Disables the Apex trigger for Account undeletes. If this is checked, then accountUndeleted subscriptions will not be available.</description>
    <inlineHelpText>Disables the Apex trigger for Account undeletes. If this is checked, then accountUndeleted subscriptions will not be available.</inlineHelpText>
    <label>Disable Account Undelete Trigger</label>
    <type>Checkbox</type>
</CustomField>