package/main/default/objects/TriggerToggle__c/fields/Disable_Account_Update_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_Account_Update_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
        <description>Disables the Apex trigger for Account updates. If this is checked, then accountUpdated subscriptions will not be available.</description>
    <inlineHelpText>Disables the Apex trigger for Account updates. If this is checked, then accountUpdated subscriptions will not be available.</inlineHelpText>
    <label>Disable Account Update Trigger</label>
    <type>Checkbox</type>
</CustomField>