package/main/default/objects/TriggerToggle__c/fields/Disable_All_Account_Triggers__c.field-meta.xml
<CustomField>
    <fullName>Disable_All_Account_Triggers__c</fullName>
    <defaultValue>false</defaultValue>
        <description>Disables all Apex triggers for Account. If this is checked, then no subscriptions on Account will be available.</description>
    <inlineHelpText>Disables all Apex triggers for Account. If this is checked, then no subscriptions on Account will be available.</inlineHelpText>
    <label>Disable All Account Triggers</label>
    <type>Checkbox</type>
</CustomField>