package/main/default/objects/TriggerToggle__c/fields/Disable_All_Case_Triggers__c.field-meta.xml
<CustomField>
    <fullName>Disable_All_Case_Triggers__c</fullName>
    <defaultValue>false</defaultValue>
        <description>Disables all Apex triggers for Case. If this is checked, then no subscriptions on Case will be available.</description>
    <inlineHelpText>Disables all Apex triggers for Case. If this is checked, then no subscriptions on Case will be available.</inlineHelpText>
    <label>Disable All Case Triggers</label>
    <type>Checkbox</type>
</CustomField>