package/main/default/objects/TriggerToggle__c/fields/Disable_All_CaseComment_Triggers__c.field-meta.xml
<CustomField>
    <fullName>Disable_All_CaseComment_Triggers__c</fullName>
    <defaultValue>false</defaultValue>
        <description>Disables all Apex triggers for CaseComment. If this is checked, then no subscriptions on CaseComment will be available.</description>
    <inlineHelpText>Disables all Apex triggers for CaseComment. If this is checked, then no subscriptions on CaseComment will be available.</inlineHelpText>
    <label>Disable All CaseComment Triggers</label>
    <type>Checkbox</type>
</CustomField>