package/main/default/objects/TriggerToggle__c/fields/Disable_All_Contact_Triggers__c.field-meta.xml
<CustomField>
    <fullName>Disable_All_Contact_Triggers__c</fullName>
    <defaultValue>false</defaultValue>
        <description>Disables all Apex triggers for Contact. If this is checked, then no subscriptions on Contact will be available.</description>
    <inlineHelpText>Disables all Apex triggers for Contact. If this is checked, then no subscriptions on Contact will be available.</inlineHelpText>
    <label>Disable All Contact Triggers</label>
    <type>Checkbox</type>
</CustomField>