package/main/default/objects/TriggerToggle__c/fields/Disable_All_Event_Triggers__c.field-meta.xml
<CustomField>
    <fullName>Disable_All_Event_Triggers__c</fullName>
    <defaultValue>false</defaultValue>
        <description>Disables all Apex triggers for Event. If this is checked, then no subscriptions on Event will be available.</description>
    <inlineHelpText>Disables all Apex triggers for Event. If this is checked, then no subscriptions on Event will be available.</inlineHelpText>
    <label>Disable All Event Triggers</label>
    <type>Checkbox</type>
</CustomField>