package/main/default/objects/TriggerToggle__c/fields/Disable_All_FeedComment_Triggers__c.field-meta.xml
<CustomField>
    <fullName>Disable_All_FeedComment_Triggers__c</fullName>
    <defaultValue>false</defaultValue>
        <description>Disables all Apex triggers for FeedComment. If this is checked, then no subscriptions on FeedComment will be available.</description>
    <inlineHelpText>Disables all Apex triggers for FeedComment. If this is checked, then no subscriptions on FeedComment will be available.</inlineHelpText>
    <label>Disable All FeedComment Triggers</label>
    <type>Checkbox</type>
</CustomField>