package/main/default/objects/TriggerToggle__c/fields/Disable_All_FeedItem_Triggers__c.field-meta.xml
<CustomField>
    <fullName>Disable_All_FeedItem_Triggers__c</fullName>
    <defaultValue>false</defaultValue>
        <description>Disables all Apex triggers for FeedItem. If this is checked, then no subscriptions on FeedItem will be available.</description>
    <inlineHelpText>Disables all Apex triggers for FeedItem. If this is checked, then no subscriptions on FeedItem will be available.</inlineHelpText>
    <label>Disable All FeedItem Triggers</label>
    <type>Checkbox</type>
</CustomField>