package/main/default/objects/TriggerToggle__c/fields/Disable_All_Lead_Triggers__c.field-meta.xml
<CustomField>
    <fullName>Disable_All_Lead_Triggers__c</fullName>
    <defaultValue>false</defaultValue>
        <description>Disables all Apex triggers for Lead. If this is checked, then no subscriptions on Lead will be available.</description>
    <inlineHelpText>Disables all Apex triggers for Lead. If this is checked, then no subscriptions on Lead will be available.</inlineHelpText>
    <label>Disable All Lead Triggers</label>
    <type>Checkbox</type>
</CustomField>