package/main/default/objects/TriggerToggle__c/fields/Disable_All_Opportunity_Triggers__c.field-meta.xml
<CustomField>
    <fullName>Disable_All_Opportunity_Triggers__c</fullName>
    <defaultValue>false</defaultValue>
        <description>Disables all Apex triggers for Opportunity. If this is checked, then no subscriptions on Opportunity will be available.</description>
    <inlineHelpText>Disables all Apex triggers for Opportunity. If this is checked, then no subscriptions on Opportunity will be available.</inlineHelpText>
    <label>Disable All Opportunity Triggers</label>
    <type>Checkbox</type>
</CustomField>