package/main/default/objects/TriggerToggle__c/fields/Disable_All_Task_Triggers__c.field-meta.xml
<CustomField>
    <fullName>Disable_All_Task_Triggers__c</fullName>
    <defaultValue>false</defaultValue>
        <description>Disables all Apex triggers for Task. If this is checked, then no subscriptions on Task will be available.</description>
    <inlineHelpText>Disables all Apex triggers for Task. If this is checked, then no subscriptions on Task will be available.</inlineHelpText>
    <label>Disable All Task Triggers</label>
    <type>Checkbox</type>
</CustomField>