package/main/default/objects/TriggerToggle__c/fields/Disable_All_Triggers__c.field-meta.xml
<CustomField>
    <fullName>Disable_All_Triggers__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check to disable all Apex triggers for the OneGraph package. This will bypass all of the other settings and effectively turn off the OneGraph package.</description>
    <inlineHelpText>Check to disable all Apex triggers for the OneGraph package. This will bypass all of the other settings and effectively turn off the OneGraph package.</inlineHelpText>
    <label>Disable All Triggers</label>
    <type>Checkbox</type>
</CustomField>