package/main/default/objects/TriggerToggle__c/fields/Disable_All_User_Triggers__c.field-meta.xml
<CustomField>
    <fullName>Disable_All_User_Triggers__c</fullName>
    <defaultValue>false</defaultValue>
        <description>Disables all Apex triggers for User. If this is checked, then no subscriptions on User will be available.</description>
    <inlineHelpText>Disables all Apex triggers for User. If this is checked, then no subscriptions on User will be available.</inlineHelpText>
    <label>Disable All User Triggers</label>
    <type>Checkbox</type>
</CustomField>