package/main/default/objects/TriggerToggle__c/fields/Disable_Case_Delete_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_Case_Delete_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
        <description>Disables the Apex trigger for Case deletes. If this is checked, then caseDeleted subscriptions will not be available.</description>
    <inlineHelpText>Disables the Apex trigger for Case deletes. If this is checked, then caseDeleted subscriptions will not be available.</inlineHelpText>
    <label>Disable Case Delete Trigger</label>
    <type>Checkbox</type>
</CustomField>