package/main/default/objects/TriggerToggle__c/fields/Disable_Case_Insert_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_Case_Insert_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
        <description>Disables the Apex trigger for Case inserts. If this is checked, then caseCreated subscriptions will not be available.</description>
    <inlineHelpText>Disables the Apex trigger for Case inserts. If this is checked, then caseCreated subscriptions will not be available.</inlineHelpText>
    <label>Disable Case Insert Trigger</label>
    <type>Checkbox</type>
</CustomField>