package/main/default/objects/TriggerToggle__c/fields/Disable_Case_Undelete_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_Case_Undelete_Trigger__c</fullName>
    <defaultValue>true</defaultValue>
        <description>Disables the Apex trigger for Case undeletes. If this is checked, then caseUndeleted subscriptions will not be available.</description>
    <inlineHelpText>Disables the Apex trigger for Case undeletes. If this is checked, then caseUndeleted subscriptions will not be available.</inlineHelpText>
    <label>Disable Case Undelete Trigger</label>
    <type>Checkbox</type>
</CustomField>