package/main/default/objects/TriggerToggle__c/fields/Disable_Case_Update_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_Case_Update_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
        <description>Disables the Apex trigger for Case updates. If this is checked, then caseUpdated subscriptions will not be available.</description>
    <inlineHelpText>Disables the Apex trigger for Case updates. If this is checked, then caseUpdated subscriptions will not be available.</inlineHelpText>
    <label>Disable Case Update Trigger</label>
    <type>Checkbox</type>
</CustomField>