package/main/default/objects/TriggerToggle__c/fields/Disable_CaseComment_Delete_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_CaseComment_Delete_Trigger__c</fullName>
    <defaultValue>true</defaultValue>
        <description>Disables the Apex trigger for CaseComment deletes. If this is checked, then caseCommentDeleted subscriptions will not be available.</description>
    <inlineHelpText>Disables the Apex trigger for CaseComment deletes. If this is checked, then caseCommentDeleted subscriptions will not be available.</inlineHelpText>
    <label>Disable CaseComment Delete Trigger</label>
    <type>Checkbox</type>
</CustomField>