package/main/default/objects/TriggerToggle__c/fields/Disable_CaseComment_Undelete_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_CaseComment_Undelete_Trigger__c</fullName>
    <defaultValue>true</defaultValue>
        <description>Disables the Apex trigger for CaseComment undeletes. If this is checked, then caseCommentUndeleted subscriptions will not be available.</description>
    <inlineHelpText>Disables the Apex trigger for CaseComment undeletes. If this is checked, then caseCommentUndeleted subscriptions will not be available.</inlineHelpText>
    <label>Disable CaseComment Undelete Trigger</label>
    <type>Checkbox</type>
</CustomField>