package/main/default/objects/TriggerToggle__c/fields/Disable_Contact_Delete_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_Contact_Delete_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
        <description>Disables the Apex trigger for Contact deletes. If this is checked, then contactDeleted subscriptions will not be available.</description>
    <inlineHelpText>Disables the Apex trigger for Contact deletes. If this is checked, then contactDeleted subscriptions will not be available.</inlineHelpText>
    <label>Disable Contact Delete Trigger</label>
    <type>Checkbox</type>
</CustomField>