package/main/default/objects/TriggerToggle__c/fields/Disable_Contact_Undelete_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_Contact_Undelete_Trigger__c</fullName>
    <defaultValue>true</defaultValue>
        <description>Disables the Apex trigger for Contact undeletes. If this is checked, then contactUndeleted subscriptions will not be available.</description>
    <inlineHelpText>Disables the Apex trigger for Contact undeletes. If this is checked, then contactUndeleted subscriptions will not be available.</inlineHelpText>
    <label>Disable Contact Undelete Trigger</label>
    <type>Checkbox</type>
</CustomField>