package/main/default/objects/TriggerToggle__c/fields/Disable_Contact_Update_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_Contact_Update_Trigger__c</fullName>
    <defaultValue>true</defaultValue>
        <description>Disables the Apex trigger for Contact updates. If this is checked, then contactUpdated subscriptions will not be available.</description>
    <inlineHelpText>Disables the Apex trigger for Contact updates. If this is checked, then contactUpdated subscriptions will not be available.</inlineHelpText>
    <label>Disable Contact Update Trigger</label>
    <type>Checkbox</type>
</CustomField>