package/main/default/objects/TriggerToggle__c/fields/Disable_Event_Insert_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_Event_Insert_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
        <description>Disables the Apex trigger for Event inserts. If this is checked, then eventCreated subscriptions will not be available.</description>
    <inlineHelpText>Disables the Apex trigger for Event inserts. If this is checked, then eventCreated subscriptions will not be available.</inlineHelpText>
    <label>Disable Event Insert Trigger</label>
    <type>Checkbox</type>
</CustomField>