package/main/default/objects/TriggerToggle__c/fields/Disable_Event_Undelete_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_Event_Undelete_Trigger__c</fullName>
    <defaultValue>true</defaultValue>
        <description>Disables the Apex trigger for Event undeletes. If this is checked, then eventUndeleted subscriptions will not be available.</description>
    <inlineHelpText>Disables the Apex trigger for Event undeletes. If this is checked, then eventUndeleted subscriptions will not be available.</inlineHelpText>
    <label>Disable Event Undelete Trigger</label>
    <type>Checkbox</type>
</CustomField>