package/main/default/objects/TriggerToggle__c/fields/Disable_Event_Update_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_Event_Update_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
        <description>Disables the Apex trigger for Event updates. If this is checked, then eventUpdated subscriptions will not be available.</description>
    <inlineHelpText>Disables the Apex trigger for Event updates. If this is checked, then eventUpdated subscriptions will not be available.</inlineHelpText>
    <label>Disable Event Update Trigger</label>
    <type>Checkbox</type>
</CustomField>