package/main/default/objects/TriggerToggle__c/fields/Disable_FeedComment_Delete_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_FeedComment_Delete_Trigger__c</fullName>
    <defaultValue>true</defaultValue>
        <description>Disables the Apex trigger for FeedComment deletes. If this is checked, then feedCommentDeleted subscriptions will not be available.</description>
    <inlineHelpText>Disables the Apex trigger for FeedComment deletes. If this is checked, then feedCommentDeleted subscriptions will not be available.</inlineHelpText>
    <label>Disable FeedComment Delete Trigger</label>
    <type>Checkbox</type>
</CustomField>