package/main/default/objects/TriggerToggle__c/fields/Disable_FeedComment_Insert_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_FeedComment_Insert_Trigger__c</fullName>
    <defaultValue>true</defaultValue>
        <description>Disables the Apex trigger for FeedComment inserts. If this is checked, then feedCommentCreated subscriptions will not be available.</description>
    <inlineHelpText>Disables the Apex trigger for FeedComment inserts. If this is checked, then feedCommentCreated subscriptions will not be available.</inlineHelpText>
    <label>Disable FeedComment Insert Trigger</label>
    <type>Checkbox</type>
</CustomField>