package/main/default/objects/TriggerToggle__c/fields/Disable_FeedComment_Undelete_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_FeedComment_Undelete_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
        <description>Disables the Apex trigger for FeedComment undeletes. If this is checked, then feedCommentUndeleted subscriptions will not be available.</description>
    <inlineHelpText>Disables the Apex trigger for FeedComment undeletes. If this is checked, then feedCommentUndeleted subscriptions will not be available.</inlineHelpText>
    <label>Disable FeedComment Undelete Trigger</label>
    <type>Checkbox</type>
</CustomField>