package/main/default/objects/TriggerToggle__c/fields/Disable_FeedComment_Update_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_FeedComment_Update_Trigger__c</fullName>
    <defaultValue>true</defaultValue>
        <description>Disables the Apex trigger for FeedComment updates. If this is checked, then feedCommentUpdated subscriptions will not be available.</description>
    <inlineHelpText>Disables the Apex trigger for FeedComment updates. If this is checked, then feedCommentUpdated subscriptions will not be available.</inlineHelpText>
    <label>Disable FeedComment Update Trigger</label>
    <type>Checkbox</type>
</CustomField>