package/main/default/objects/TriggerToggle__c/fields/Disable_FeedItem_Delete_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_FeedItem_Delete_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
        <description>Disables the Apex trigger for FeedItem deletes. If this is checked, then feedItemDeleted subscriptions will not be available.</description>
    <inlineHelpText>Disables the Apex trigger for FeedItem deletes. If this is checked, then feedItemDeleted subscriptions will not be available.</inlineHelpText>
    <label>Disable FeedItem Delete Trigger</label>
    <type>Checkbox</type>
</CustomField>