package/main/default/objects/TriggerToggle__c/fields/Disable_FeedItem_Insert_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_FeedItem_Insert_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
        <description>Disables the Apex trigger for FeedItem inserts. If this is checked, then feedItemCreated subscriptions will not be available.</description>
    <inlineHelpText>Disables the Apex trigger for FeedItem inserts. If this is checked, then feedItemCreated subscriptions will not be available.</inlineHelpText>
    <label>Disable FeedItem Insert Trigger</label>
    <type>Checkbox</type>
</CustomField>