package/main/default/objects/TriggerToggle__c/fields/Disable_FeedItem_Undelete_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_FeedItem_Undelete_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
        <description>Disables the Apex trigger for FeedItem undeletes. If this is checked, then feedItemUndeleted subscriptions will not be available.</description>
    <inlineHelpText>Disables the Apex trigger for FeedItem undeletes. If this is checked, then feedItemUndeleted subscriptions will not be available.</inlineHelpText>
    <label>Disable FeedItem Undelete Trigger</label>
    <type>Checkbox</type>
</CustomField>