package/main/default/objects/TriggerToggle__c/fields/Disable_FeedItem_Update_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_FeedItem_Update_Trigger__c</fullName>
    <defaultValue>true</defaultValue>
        <description>Disables the Apex trigger for FeedItem updates. If this is checked, then feedItemUpdated subscriptions will not be available.</description>
    <inlineHelpText>Disables the Apex trigger for FeedItem updates. If this is checked, then feedItemUpdated subscriptions will not be available.</inlineHelpText>
    <label>Disable FeedItem Update Trigger</label>
    <type>Checkbox</type>
</CustomField>