package/main/default/objects/TriggerToggle__c/fields/Disable_Lead_Delete_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_Lead_Delete_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
        <description>Disables the Apex trigger for Lead deletes. If this is checked, then leadDeleted subscriptions will not be available.</description>
    <inlineHelpText>Disables the Apex trigger for Lead deletes. If this is checked, then leadDeleted subscriptions will not be available.</inlineHelpText>
    <label>Disable Lead Delete Trigger</label>
    <type>Checkbox</type>
</CustomField>