package/main/default/objects/TriggerToggle__c/fields/Disable_Lead_Insert_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_Lead_Insert_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
        <description>Disables the Apex trigger for Lead inserts. If this is checked, then leadCreated subscriptions will not be available.</description>
    <inlineHelpText>Disables the Apex trigger for Lead inserts. If this is checked, then leadCreated subscriptions will not be available.</inlineHelpText>
    <label>Disable Lead Insert Trigger</label>
    <type>Checkbox</type>
</CustomField>