package/main/default/objects/TriggerToggle__c/fields/Disable_Lead_Undelete_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_Lead_Undelete_Trigger__c</fullName>
    <defaultValue>true</defaultValue>
        <description>Disables the Apex trigger for Lead undeletes. If this is checked, then leadUndeleted subscriptions will not be available.</description>
    <inlineHelpText>Disables the Apex trigger for Lead undeletes. If this is checked, then leadUndeleted subscriptions will not be available.</inlineHelpText>
    <label>Disable Lead Undelete Trigger</label>
    <type>Checkbox</type>
</CustomField>