package/main/default/objects/TriggerToggle__c/fields/Disable_Lead_Update_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_Lead_Update_Trigger__c</fullName>
    <defaultValue>true</defaultValue>
        <description>Disables the Apex trigger for Lead updates. If this is checked, then leadUpdated subscriptions will not be available.</description>
    <inlineHelpText>Disables the Apex trigger for Lead updates. If this is checked, then leadUpdated subscriptions will not be available.</inlineHelpText>
    <label>Disable Lead Update Trigger</label>
    <type>Checkbox</type>
</CustomField>