package/main/default/objects/TriggerToggle__c/fields/Disable_Opportunity_Delete_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_Opportunity_Delete_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
        <description>Disables the Apex trigger for Opportunity deletes. If this is checked, then opportunityDeleted subscriptions will not be available.</description>
    <inlineHelpText>Disables the Apex trigger for Opportunity deletes. If this is checked, then opportunityDeleted subscriptions will not be available.</inlineHelpText>
    <label>Disable Opportunity Delete Trigger</label>
    <type>Checkbox</type>
</CustomField>