package/main/default/objects/TriggerToggle__c/fields/Disable_Opportunity_Insert_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_Opportunity_Insert_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
        <description>Disables the Apex trigger for Opportunity inserts. If this is checked, then opportunityCreated subscriptions will not be available.</description>
    <inlineHelpText>Disables the Apex trigger for Opportunity inserts. If this is checked, then opportunityCreated subscriptions will not be available.</inlineHelpText>
    <label>Disable Opportunity Insert Trigger</label>
    <type>Checkbox</type>
</CustomField>