package/main/default/objects/TriggerToggle__c/fields/Disable_Opportunity_Undelete_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_Opportunity_Undelete_Trigger__c</fullName>
    <defaultValue>true</defaultValue>
        <description>Disables the Apex trigger for Opportunity undeletes. If this is checked, then opportunityUndeleted subscriptions will not be available.</description>
    <inlineHelpText>Disables the Apex trigger for Opportunity undeletes. If this is checked, then opportunityUndeleted subscriptions will not be available.</inlineHelpText>
    <label>Disable Opportunity Undelete Trigger</label>
    <type>Checkbox</type>
</CustomField>