package/main/default/objects/TriggerToggle__c/fields/Disable_Opportunity_Update_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_Opportunity_Update_Trigger__c</fullName>
    <defaultValue>true</defaultValue>
        <description>Disables the Apex trigger for Opportunity updates. If this is checked, then opportunityUpdated subscriptions will not be available.</description>
    <inlineHelpText>Disables the Apex trigger for Opportunity updates. If this is checked, then opportunityUpdated subscriptions will not be available.</inlineHelpText>
    <label>Disable Opportunity Update Trigger</label>
    <type>Checkbox</type>
</CustomField>