package/main/default/objects/TriggerToggle__c/fields/Disable_Task_Delete_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_Task_Delete_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
        <description>Disables the Apex trigger for Task deletes. If this is checked, then taskDeleted subscriptions will not be available.</description>
    <inlineHelpText>Disables the Apex trigger for Task deletes. If this is checked, then taskDeleted subscriptions will not be available.</inlineHelpText>
    <label>Disable Task Delete Trigger</label>
    <type>Checkbox</type>
</CustomField>