package/main/default/objects/TriggerToggle__c/fields/Disable_Task_Undelete_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_Task_Undelete_Trigger__c</fullName>
    <defaultValue>true</defaultValue>
        <description>Disables the Apex trigger for Task undeletes. If this is checked, then taskUndeleted subscriptions will not be available.</description>
    <inlineHelpText>Disables the Apex trigger for Task undeletes. If this is checked, then taskUndeleted subscriptions will not be available.</inlineHelpText>
    <label>Disable Task Undelete Trigger</label>
    <type>Checkbox</type>
</CustomField>