package/main/default/objects/TriggerToggle__c/fields/Disable_Task_Update_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_Task_Update_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
        <description>Disables the Apex trigger for Task updates. If this is checked, then taskUpdated subscriptions will not be available.</description>
    <inlineHelpText>Disables the Apex trigger for Task updates. If this is checked, then taskUpdated subscriptions will not be available.</inlineHelpText>
    <label>Disable Task Update Trigger</label>
    <type>Checkbox</type>
</CustomField>