package/main/default/objects/TriggerToggle__c/fields/Disable_User_Delete_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_User_Delete_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
        <description>Disables the Apex trigger for User deletes. If this is checked, then userDeleted subscriptions will not be available.</description>
    <inlineHelpText>Disables the Apex trigger for User deletes. If this is checked, then userDeleted subscriptions will not be available.</inlineHelpText>
    <label>Disable User Delete Trigger</label>
    <type>Checkbox</type>
</CustomField>