package/main/default/objects/TriggerToggle__c/fields/Disable_User_Insert_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_User_Insert_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
        <description>Disables the Apex trigger for User inserts. If this is checked, then userCreated subscriptions will not be available.</description>
    <inlineHelpText>Disables the Apex trigger for User inserts. If this is checked, then userCreated subscriptions will not be available.</inlineHelpText>
    <label>Disable User Insert Trigger</label>
    <type>Checkbox</type>
</CustomField>