package/main/default/objects/TriggerToggle__c/fields/Disable_User_Undelete_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_User_Undelete_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
        <description>Disables the Apex trigger for User undeletes. If this is checked, then userUndeleted subscriptions will not be available.</description>
    <inlineHelpText>Disables the Apex trigger for User undeletes. If this is checked, then userUndeleted subscriptions will not be available.</inlineHelpText>
    <label>Disable User Undelete Trigger</label>
    <type>Checkbox</type>
</CustomField>