package/main/default/objects/TriggerToggle__c/fields/Disable_User_Update_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_User_Update_Trigger__c</fullName>
    <defaultValue>true</defaultValue>
        <description>Disables the Apex trigger for User updates. If this is checked, then userUpdated subscriptions will not be available.</description>
    <inlineHelpText>Disables the Apex trigger for User updates. If this is checked, then userUpdated subscriptions will not be available.</inlineHelpText>
    <label>Disable User Update Trigger</label>
    <type>Checkbox</type>
</CustomField>